# colder

./: .gitignore  .readthedocs.yaml  README.md  bibliography.md  setup.cfg
docs/: requirements.txt
docs/source/: colder.backend.cupy.rst  colder.backend.sparse.rst  colder.core.rst  colder.models.rst  colder.quantum.rst  colder.simulation.rst  conf.py  index.rst
examples/: README.md  ising-1d.ipynb
public/: trento2023.md
src/colder/: __init__.py  general.py
src/colder/backend/: __init__.py
src/colder/backend/cupy/: __init__.py  interface.py  interface.sparse.py.bak  routines.py  routines.sparse.py.bak
src/colder/backend/qibo/: __init__.py  interface.py  routines.py
src/colder/backend/scipy/: __init__.py  interface.py  routines.py
src/colder/backend/sparse/: interface.py  routines.py
src/colder/core/: __init__.py  pauli_algebra.py  physics.py  subroutines.py
src/colder/core/quantum/: cupy.py  cupy.sparse.py.bak  numpy.py  sparse.py
src/colder/gauge/: __init__.py  adiabatic_potential.py
src/colder/models/: lattice.py
src/colder/quantum/: __init__.py  math.py
src/colder/simulation/: annealing.py  cold.py  numerical.py
