[metadata]
name = colder
version = 1.0.0
author = Francesco Pio Barone
author_email = baronefr@proton.me
description = package for simulation of annealing schedules with Couterdiabatic Optimized Local Driving
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/CERN-IT-INNOVATION/colder
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Topic :: Scientific/Engineering :: Mathematics

[options]
zip_safe = False
package_dir=
    =src
packages=find:
python_requires = >=3.9
install_requires =
    numpy>=1.23
    scipy>=1.11.1
    sympy==1.12
    matplotlib==3.7.1
    ipykernel==6.23
    qibo==0.1.15
    cupy-cuda12x==12.2.0
    scikit-optimize==0.9.0

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx>=4.5.0
    sphinx-rtd-theme>=1.0.0
    sphinxcontrib-napoleon>=0.7
